chore: Remove `app` prefix from components to avoid coflicts
chore: Remove `app` prefix from components to avoid coflicts

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <ngx-demo-app></ngx-demo-app>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
